<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="skin_type_preference"
        android:title="@string/skin_type"
        android:entries="@array/skin_type_entries"
        android:entryValues="@array/skin_type_entryvalues" />

    <MultiSelectListPreference
        android:key="skin_specificities_preference"
        android:title="@string/skin_specificities"
        android:entries="@array/skin_specificities_entries"
        android:entryValues="@array/skin_specificities_entryvalues" />

    <ListPreference
        android:key="hair_type_preference"
        android:title="@string/hair_type"
        android:entries="@array/hair_type_entries"
        android:entryValues="@array/hair_type_entryvalues" />

    <CheckBoxPreference
        android:key="dandruff_preference"
        android:title="@string/dandruff_checkbox_preference"
        android:summaryOn="@string/summary_dandruff_on"
        android:summaryOff="@string/summary_dandruff_off"/>


</PreferenceScreen>