<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_recipe"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/action_new_recipe" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/action_my_recipes" />
        <item
            android:id="@+id/nav_ingredient_lookup"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/action_ingredient_lookup" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>
