<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddOnFragment">


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/base_description_text_view"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       style="@style/sectionStyle"
       android:text="@string/base_ingredient"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/base_ingredient_recycler_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:id="@+id/pick_base_ingredient_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/sectionStyle"
        android:text="@string/add_ons"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_on_recycler_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:id="@+id/pick_add_on_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sectionStyle"
        android:id="@+id/shelf_life_text_view"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"/>

</LinearLayout>